@@ -1,4 +1,13 @@
 2002-06-23  Rachel Hestilow  <hestilow@ximian.com>
+
+	* glib/Object.cs, glib/SList.cs, glib/Value.cs, gtk/Application.cs:
+	Move documentation to right before their actual methods, rather
+	than the DllImported ones.
+
+	* generator/Method.cs: Generate documentation before the actual
+	method and not the DllImport.
+
+2002-06-23  Rachel Hestilow  <hestilow@ximian.com>
 	
 	* generator/ClassBase.cs: Add accessors for methods and signals.
 	Change GenSignals and GenMethods to public, as csc has a different
